--- a/Dockerfile2
+++ b/Dockerfile2
@@ -35,7 +35,7 @@ RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true 
 
 #account
 RUN adduser hadoop
-RUN echo 'hadoop:m40931gf' | chpasswd
+RUN echo 'hadoop:hadoop' | chpasswd
 #USER hadoop    
 
 #protobuf
@@ -59,19 +59,30 @@ RUN mkdir -p $MY_HOME/soft/apache/hadoop
 #apt-get install vim
 
 #zookeeper
+RUN adduser zookeeper
+RUN echo 'zookeeper:zookeeper' | chpasswd
+USER zookeeper
+
 ENV ZOOKEEPER_ACCOUNT=/home/zookeeper
 ENV ZOOKEEPER_HOME=$ZOOKEEPER_ACCOUNT/soft/apache/zookeeper/zookeeper-3.4.6
 ENV ZOOKEEPER_CONFIG_HOME=$ZOOKEEPER_HOME/conf
 
 RUN mkdir -p $ZOOKEEPER_ACCOUNT/soft/apache/zookeeper
-RUN adduser zookeeper
-RUN echo 'zookeeper:zookeeper' | chpasswd
+
 #WORKDIR $ZOOKEEPER_ACCOUNT/soft/apache/zookeeper
 #RUN wget http://apache.mirror.cdnetworks.com/zookeeper/zookeeper-3.4.6/zookeeper-3.4.6.tar.gz
 #RUN tar xvzf zookeeper-3.4.6.tar.gz
 
 #ADD ./zookeeper-conf/zoo.cfg $ZOOKEEPER_CONFIG_HOME
 #RUN mkdir -p $ZOOKEEPER_HOME/zookeeper-data
+
+#EXPOSE 2888 3888
+
+#etc
+USER root
+RUN apt-get -y install net-tools
+RUN apt-get -y install iputils-ping
+RUN apt-get -y install vim
 
 CMD ["/usr/sbin/sshd", "-D"]
 #CMD ["/etc/bootstrap.sh", "-d"]
