--- a/zookeeper-conf/zoo.cfg
+++ b/zookeeper-conf/zoo.cfg
@@ -9,7 +9,7 @@ syncLimit=5
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just 
 # example sakes.
-dataDir=$ZOOKEEPER_HOME/zookeeper-data
+dataDir=/home/zookeeper/soft/apache/zookeeper/zookeeper-3.4.6/zookeeper-data
 # the port at which the clients will connect
 clientPort=2181
 # the maximum number of client connections.
@@ -26,6 +26,7 @@ maxClientCnxns=60
 # Purge task interval in hours
 # Set to "0" to disable auto purge feature
 #autopurge.purgeInterval=1
+
 maxSessionTimeout=180000
 server.1=node1:2888:3888
 server.2=node2:2888:3888
